[gd_scene load_steps=13 format=3 uid="uid://m4gcdu32icpw"]

[ext_resource type="Script" path="res://Scripts/MainMenu Scripts/Main.gd" id="1_p8irn"]
[ext_resource type="PackedScene" uid="uid://hmabq20jju6k" path="res://Scenes/WaveManager.tscn" id="2_qp5if"]
[ext_resource type="PackedScene" uid="uid://cod3136me76mx" path="res://Scenes/MainMenu/OptionsMenu.tscn" id="3_ey0cq"]
[ext_resource type="Script" path="res://Scripts/MainMenu Scripts/InGame.gd" id="4_0m3lu"]
[ext_resource type="PackedScene" uid="uid://bjexkidu8kax5" path="res://Scenes/MainMenu/MainMenu.tscn" id="4_3xufo"]
[ext_resource type="Script" path="res://Scripts/MainMenu Scripts/MenuLayer.gd" id="5_cypep"]
[ext_resource type="Texture2D" uid="uid://i7fqlwhall0o" path="res://assets/Custom Sprites/Button_Up.png" id="5_vjo7u"]
[ext_resource type="Script" path="res://Scripts/MainMenu Scripts/GameItems.gd" id="6_apovs"]
[ext_resource type="Texture2D" uid="uid://yxysvqd1i2us" path="res://assets/Custom Sprites/Button_Down.png" id="6_blri3"]
[ext_resource type="Script" path="res://Scenes/MainMenu/CustomButton.gd" id="7_4ug43"]
[ext_resource type="Script" path="res://Scenes/MainMenu/Levels.gd" id="7_c4qsh"]
[ext_resource type="FontFile" uid="uid://clnuex6p1oda3" path="res://assets/brackeys_platformer_assets/fonts/PixelOperator8-Bold.ttf" id="8_357ha"]

[node name="Main" type="Node2D"]
script = ExtResource("1_p8irn")

[node name="MainMenu" parent="." instance=ExtResource("4_3xufo")]
anchors_preset = -1
offset_right = 1152.0
offset_bottom = 648.0
grow_horizontal = 1
grow_vertical = 1
size_flags_horizontal = 0
metadata/_edit_use_anchors_ = true

[node name="InGame" type="Node2D" parent="."]
script = ExtResource("4_0m3lu")

[node name="LoseScreen" type="CanvasLayer" parent="InGame"]
visible = false

[node name="Label" type="Label" parent="InGame/LoseScreen"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -85.0
offset_top = -79.0
offset_right = 93.0
offset_bottom = 28.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("8_357ha")
text = "Game Over"
horizontal_alignment = 1

[node name="RestartButton" type="TextureButton" parent="InGame/LoseScreen"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -83.0
offset_top = -39.0
offset_right = 88.0
offset_bottom = 46.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
texture_normal = ExtResource("5_vjo7u")
texture_pressed = ExtResource("6_blri3")
stretch_mode = 5
script = ExtResource("7_4ug43")

[node name="Label" type="Label" parent="InGame/LoseScreen/RestartButton"]
layout_mode = 0
offset_left = -16.0
offset_top = 28.0
offset_right = 190.0
offset_bottom = 51.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("8_357ha")
text = "Restart"
horizontal_alignment = 1

[node name="EndScreen" type="CanvasLayer" parent="InGame"]
visible = false

[node name="Label" type="Label" parent="InGame/EndScreen"]
offset_left = 423.0
offset_top = 113.0
offset_right = 727.0
offset_bottom = 225.0
text = "You Passed!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ContinueButton" type="TextureButton" parent="InGame/EndScreen"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -83.0
offset_top = -39.0
offset_right = 88.0
offset_bottom = 46.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
texture_normal = ExtResource("5_vjo7u")
texture_pressed = ExtResource("6_blri3")
stretch_mode = 5
script = ExtResource("7_4ug43")

[node name="Label" type="Label" parent="InGame/EndScreen/ContinueButton"]
layout_mode = 0
offset_left = 1.0
offset_top = 28.0
offset_right = 171.0
offset_bottom = 51.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("8_357ha")
text = "Continue
"
horizontal_alignment = 1

[node name="MenuLayer" type="CanvasLayer" parent="InGame"]
visible = false
script = ExtResource("5_cypep")

[node name="pause" type="TextureButton" parent="InGame/MenuLayer"]
offset_left = 6.0
offset_right = 146.0
offset_bottom = 54.0
size_flags_vertical = 3
texture_normal = ExtResource("5_vjo7u")
texture_pressed = ExtResource("6_blri3")
stretch_mode = 5
script = ExtResource("7_4ug43")

[node name="Label" type="Label" parent="InGame/MenuLayer/pause"]
layout_mode = 0
offset_left = 41.0
offset_top = 19.0
offset_right = 99.0
offset_bottom = 54.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("8_357ha")
theme_override_font_sizes/font_size = 8
text = "Pause"
horizontal_alignment = 1
autowrap_mode = 2

[node name="OptionsMenu" parent="InGame/MenuLayer" instance=ExtResource("3_ey0cq")]
process_mode = 2
visible = false

[node name="GameItems" type="Node2D" parent="InGame"]
script = ExtResource("6_apovs")

[node name="Levels" type="Node2D" parent="InGame/GameItems"]
script = ExtResource("7_c4qsh")

[node name="WaveManager" parent="InGame/GameItems" instance=ExtResource("2_qp5if")]

[connection signal="in_game" from="MainMenu" to="InGame/MenuLayer" method="_on_main_menu_in_game"]
[connection signal="in_game" from="MainMenu" to="InGame/GameItems" method="_on_main_menu_in_game"]
[connection signal="in_menu" from="MainMenu" to="InGame/MenuLayer" method="_on_main_menu_in_menu"]
[connection signal="in_menu" from="MainMenu" to="InGame/GameItems" method="_on_main_menu_in_menu"]
[connection signal="instantiate_level" from="MainMenu" to="InGame/GameItems" method="_on_main_menu_instantiate_level"]
[connection signal="button_down" from="InGame/LoseScreen/RestartButton" to="InGame/LoseScreen/RestartButton" method="_on_button_down"]
[connection signal="button_up" from="InGame/LoseScreen/RestartButton" to="InGame/LoseScreen/RestartButton" method="_on_button_up"]
[connection signal="pressed" from="InGame/LoseScreen/RestartButton" to="MainMenu" method="_on_restart_button_pressed"]
[connection signal="pressed" from="InGame/LoseScreen/RestartButton" to="InGame" method="_on_restart_button_pressed"]
[connection signal="button_down" from="InGame/EndScreen/ContinueButton" to="InGame/EndScreen/ContinueButton" method="_on_button_down"]
[connection signal="button_up" from="InGame/EndScreen/ContinueButton" to="InGame/EndScreen/ContinueButton" method="_on_button_up"]
[connection signal="pressed" from="InGame/EndScreen/ContinueButton" to="MainMenu" method="_on_continue_button_pressed"]
[connection signal="pressed" from="InGame/EndScreen/ContinueButton" to="InGame" method="_on_continue_button_pressed"]
[connection signal="button_down" from="InGame/MenuLayer/pause" to="InGame/MenuLayer/pause" method="_on_button_down"]
[connection signal="button_up" from="InGame/MenuLayer/pause" to="InGame/MenuLayer/pause" method="_on_button_up"]
[connection signal="pressed" from="InGame/MenuLayer/pause" to="InGame" method="_on_pause_pressed"]
[connection signal="pressed" from="InGame/MenuLayer/pause" to="InGame/MenuLayer" method="_on_pause_pressed"]
[connection signal="pressed" from="InGame/MenuLayer/pause" to="InGame/GameItems" method="_on_pause_pressed"]
[connection signal="menu_emit" from="InGame/MenuLayer/OptionsMenu" to="MainMenu" method="_on_options_menu_menu_emit"]
[connection signal="play" from="InGame/MenuLayer/OptionsMenu" to="InGame/MenuLayer" method="_on_options_menu_play"]
[connection signal="play" from="InGame/MenuLayer/OptionsMenu" to="InGame/GameItems" method="_on_options_menu_play"]
[connection signal="town_hall_destroyed" from="InGame/GameItems" to="MainMenu" method="_on_town_hall_destroyed"]
[connection signal="town_hall_destroyed" from="InGame/GameItems" to="InGame" method="_on_town_hall_destroyed"]
[connection signal="child_entered_tree" from="InGame/GameItems/Levels" to="InGame/GameItems/WaveManager" method="_on_levels_child_entered_tree"]
[connection signal="win" from="InGame/GameItems/WaveManager" to="MainMenu" method="_on_wave_manager_win"]
[connection signal="win" from="InGame/GameItems/WaveManager" to="InGame" method="_on_wave_manager_win"]
